--- a/jest-error-repo/package.json
+++ b/jest-error-repo/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ng-stack/forms": "^2.4.0",
     "@nrwl/angular": "13.7.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
